--- a/kubernetes/apps/default/sonarr/sonarr.yaml
+++ b/kubernetes/apps/default/sonarr/sonarr.yaml
@@ -57,6 +57,13 @@ spec:
             image:
               repository: linuxserver/sonarr
               tag: 4.0.9.2244-ls257
+            resources:
+              limits:
+                cpu: 500m
+                memory: 1Gi
+              requests:
+                cpu: 100m
+                memory: 500m
         enabled: true
         type: deployment
     global:
