Try to overwrite config for radarr

--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -88,6 +88,12 @@ spec:
               - radarr.internal.${SECRET_DOMAIN}
             secretName: radarr-tls
     persistence:
+      existing-config:
+        type: configMap
+        advancedMounts:
+          main:
+            radarr:
+              - path: /config/config.xml
       config:
         accessMode: ReadWriteOnce
         enabled: true
