Try to overwrite config for radarr

--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -90,6 +90,7 @@ spec:
     persistence:
       existing-config:
         type: configMap
+        name: existing-config
         advancedMounts:
           main:
             radarr:
