Try to overwrite config for radarr

--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -91,6 +91,7 @@ spec:
       existing-config:
         type: secret
         name: radarr-apikey
+        defaultMode: 0777
         advancedMounts:
           main:
             radarr:
