--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -34,8 +34,11 @@ spec:
                 value: true
               - name: DISABLE_SSL_VERIFY
                 value: true
-            envFrom:
-              - secret: radarr-apikey
+              - name: APIKEY
+                valueFrom:
+                  secretKeyRef:
+                    name: radarr-apikey
+                    key: API_KEY
             image:
               repository: ghcr.io/onedr0p/exportarr
               tag: v2.0.1
