--- a/kubernetes/apps/default/radarr/secret.sops.yaml
+++ b/kubernetes/apps/default/radarr/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    API_KEY: ENC[AES256_GCM,data:57jEnOu0uvNzdPbm/alOS85UHvv5DMfjFMCagBpE/WKiDfckkQvqmLOKQP0=,iv:uS5ly08el5Yo+55c8h37gzcY3ft21ZBOc8RZuaMD/t8=,tag:/fx5tWWYc7+3KOdwT3Y/gg==,type:str]
+    APIKEY: ENC[AES256_GCM,data:uo6Oz34lfj0oa7XaGJ0qkPDt6xglCv59QaCfJQfwmAByp5GqYBjkSpeQiw0=,iv:N2EupaliiZpzptmKg+ych8hMGS876Gleqg2PUE7HnfI=,tag:to8y9Lv1mOQrNE661mz6lw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             ODFiZ0ZNNldoaFRNQ1pvMkZrczBmbncKwXszjlYxaOQ2VC17LJpEFQOoquoswkM/
             2fkREaeaVQUm4XA/tLzGvzbVlCh1nGa0/GaAvb3zU5qkD730PlbuNw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-08T20:48:40Z"
-    mac: ENC[AES256_GCM,data:aLh/h8zowu4tPVN2i1zPUpTHLagO5hd+YxRwJmLqurW7x+dmVgvntQcqCHj2Sna4nCl1IJH9YdZQmuughtr+RPBQ7mrffovgVIk525Q6G3dp3R/XGmWaCGfoS45iOW3Of3EMAEfXQnGUAuYHxTP4d+qUZFEOhDY7Jj3ZAvjc7c8=,iv:qKNVKBwoMEf/0PVJX8A18fFSXJrF3QXR0W4UVl9sPWM=,tag:GumqVGTS5o3cbw8dcvk8zA==,type:str]
+    lastmodified: "2024-10-08T21:11:54Z"
+    mac: ENC[AES256_GCM,data:4jaJpvLQdJK8oSrEfVO+RDfn6NqgSZSNbOJfHulh5D6x+n5wArBE2I1DXKDA8r3VVv7433ddMrmvOeowetmnQn+txExIe/2LF3UbTcZ3T+ceuqH1IMi8fQKn74e98v5eOLFi0iwr2n2YjSM0Hqo+HRnZRrLFFP0hDRb4tmpycvc=,iv:kUKj7hlgINfkUgkWFEzvjK7DGovei1EkzWke+pkedUI=,tag:f4R33TkD8PjmLpFDJydCAA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
