--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -50,6 +50,11 @@ spec:
                 value: 1000
               - name: PGID
                 value: 1000
+              - name: APIKEY
+                valueFrom:
+                  secretKeyRef:
+                    name: radarr-apikey
+                    key: APIKEY
             image:
               repository: linuxserver/radarr
               tag: 5.11.0
