Add separate radarr instance for anime

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -26,6 +26,7 @@ resources:
   - ./homepage
   - ./qbittorrent
   - ./adguard
+  - ./radarr-anime
 configMapGenerator:
   - name: general-dashboards
     namespace: default
