--- a/kubernetes/apps/default/radarr-anime/radarr-anime.yaml
+++ b/kubernetes/apps/default/radarr-anime/radarr-anime.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: radarr
+  name: radarr-anime
   namespace: default
 spec:
   chart:
@@ -15,7 +15,7 @@ spec:
         namespace: flux-system
       version: 3.4.0
   interval: 12h0m0s
-  releaseName: radarr
+  releaseName: radarr-anime
   targetNamespace: default
   values:
     controllers:
@@ -55,7 +55,7 @@ spec:
               - radarr
             env:
               - name: URL
-                value: http://radarr:7878
+                value: http://radarr-anime:7878
               - name: PORT
                 value: 7879
               - name: ENABLE_ADDITIONAL_METRICS
@@ -91,29 +91,29 @@ spec:
         enabled: true
         type: deployment
     global:
-      fullnameOverride: radarr
+      fullnameOverride: radarr-anime
       labels:
-        app: radarr
+        app: radarr-anime
     ingress:
-      radarr:
+      radarr-anime:
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
           nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
-          nginx.ingress.kubernetes.io/otel-service-name: radarr
+          nginx.ingress.kubernetes.io/otel-service-name: radarr-anime
           nginx.ingress.kubernetes.io/service-upstream: "false"
         className: internal
         enabled: true
         hosts:
-          - host: radarr.internal.${SECRET_DOMAIN}
+          - host: radarr-anime.internal.${SECRET_DOMAIN}
             paths:
               - path: /
                 pathType: Prefix
                 service:
-                  identifier: radarr
+                  identifier: radarr-anime
         tls:
           - hosts:
-              - radarr.internal.${SECRET_DOMAIN}
-            secretName: radarr-tls
+              - radarr-anime.internal.${SECRET_DOMAIN}
+            secretName: radarr-anime-tls
     persistence:
       existing-config:
         type: secret
@@ -141,7 +141,7 @@ spec:
         size: 1Gi
         advancedMounts:
           main:
-            radarr:
+            radarr-anime:
               - path: /custom-services.d
                 readOnly: false
       custom-cont-init:
@@ -150,7 +150,7 @@ spec:
         name: script-init
         advancedMounts:
           main:
-            radarr:
+            radarr-anime:
               - path: /custom-cont-init.d
                 readOnly: false
     service:
@@ -165,7 +165,7 @@ spec:
             primary: false
             protocol: HTTP
         primary: false
-      radarr:
+      radarr-anime:
         controller: main
         enabled: true
         ports:
@@ -185,4 +185,4 @@ spec:
             port: metrics
             scheme: http
             scrapeTimeout: 90s
-        serviceName: radarr-exportarr
+        serviceName: radarr-anime-exportarr
