Add separate radarr instance for anime

--- a/kubernetes/apps/default/radarr-anime/secret.sops.yaml
+++ b/kubernetes/apps/default/radarr-anime/secret.sops.yaml
@@ -1,8 +1,28 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: radarr-anime-apikey
-  namespace: default
+    name: radarr-anime-apikey
+    namespace: default
 type: Opaque
 stringData:
-  APIKEY: ""
+    APIKEY: ENC[AES256_GCM,data:FmlSk+iJhHTFWxQRuScsOr6hmwgbaUMKrwvHN+ITxn0=,iv:zOtD/xaQcIaBPNsHUZZl/il9m7cArSyC08HvwtcqXd0=,tag:fzQl85PVr1D+lPdyPJuTvQ==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age19jc9zp5pc7me0wkx28kc2ypr9qh6t9zphn3fdk63ae9dz9a2h5gsh4w866
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPQSs1RTFNR1oySXo4ZFg4
+            Z2kvOGhjTVEyUnRweTBweWhkd2tTbzBWeVhJCk5WbXFSRDNha2R6RWdzN0ZMbk1N
+            bFo0WXdTQVY5eTQvQllnN09zUEMvQzgKLS0tIC9NTkltQnhLNjlGZkRGSHdpL21E
+            Q2lWZ3M2VDNBYlRRc3JkN3VDeE90SDQKloSQqc2vfdQnVc7Y4kXc338kChhxPG0I
+            /wCX01PbVyUhq2O0xm7l9xva0RPeRsvWPO7Gp/TTvXJw7H3htsopOw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-10-09T14:27:06Z"
+    mac: ENC[AES256_GCM,data:UB75BuL5pLxqV3Gbuh8oQIuKPFFkDLm6INduglQCH3pO8ARGqnecoT4CSirpLtm6ke+XU24380lGr7LSgFTCGJ+LOJasZfZySaHnKY1jCNmQBDv+D5Xf/BIjPa/I7KWc66Ca1Vx+w0KjoeNnnqhPFq3MqK/6HXPnN73DKoVb3Sk=,iv:DmQNTFO79vh78+MdSDMgaXiVrFt8bopbajPRmVmq2D8=,tag:FNZh5kjbphnwJWxrHgazyw==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.0
