Add separate sonarr instance for anime

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -27,6 +27,7 @@ resources:
   - ./qbittorrent
   - ./adguard
   - ./radarr-anime
+  - ./sonarr-anime
 configMapGenerator:
   - name: general-dashboards
     namespace: default
