--- a/kubernetes/apps/default/sonarr-anime/kustomization.yaml
+++ b/kubernetes/apps/default/sonarr-anime/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - sonarr.yaml
+  - ./sonarr-anime.yaml
   - ./secret.sops.yaml
   - ./sonarr-scripts.yaml
