--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -29,7 +29,7 @@ spec:
         traffic.sidecar.istio.io/excludeInboundPorts: "80,443"
         traffic.sidecar.istio.io/excludeOutboundIPRanges: "10.96.0.0/16,10.69.0.0/16"
       labels:
-        sidecar.istio.io/inject: "true"
+        sidecar.istio.io/inject: "false"
       service:
         annotations:
           io.cilium/lb-ipam-ips: "192.168.1.202"
