--- a/kubernetes/apps/default/bazarr/secret.sops.yaml
+++ b/kubernetes/apps/default/bazarr/secret.sops.yaml
@@ -4,10 +4,8 @@ metadata:
     name: bazarr-apikey
     namespace: default
 type: Opaque
-data:
-    API_KEY: ENC[AES256_GCM,data:U4uGifhyKqq2x43nTFmmftABlCJ0Csd8X0bqUh5PuYjMQnbHdPZe79KORV8=,iv:oEZr6G2c7Cu67qF6fsaVRJ1jGcFT7mhdFJ4dGwF12uY=,tag:+igF5acDmjApt2zwD6teiQ==,type:str]
-    AUTH_USERNAME: ENC[AES256_GCM,data:hJLu10SefoBzquhd,iv:e5NOm82SmBqAH7JTX4OFug1kKVO+ygaQ8v8JEPikwMA=,tag:zebxC7lDkpnP1TLRMlNjFg==,type:str]
-    AUTH_PASSWORD: ENC[AES256_GCM,data:G7T1bLrtKR6+rphu,iv:C6KAfxWYYrkPLipLjP7DJwlLHfbHeCeYrlVTdFrJrlE=,tag:oSdQYPN1ppLL/bNJHJ0faA==,type:str]
+stringData:
+    API_KEY: ENC[AES256_GCM,data:Q+ziyzLaUn02bfcN8j0k48zkN0idYTw+QF2b6EqPXjEQ5H6xNV+QQRAuIFM=,iv:h0iwieoxZPqsMW4Af62/7zU4fXM/bYjaH9XZxRRwCdE=,tag:T2Py4R47b1gIvDl8tAvJDQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +21,8 @@ sops:
             SlBTRHNpTmxtdUk4dE9hSDlwSDVmSGsKJRGp0MSuKFuwbNFFFK8Ut1Wm9S5WSb6r
             e8XOfPNgUi6Ruo+uDpukywoyGlYxw7JHO976HRWKXNacHXKsE3DWuA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-03T14:44:46Z"
-    mac: ENC[AES256_GCM,data:tl+22IdsurBH6qJn1VK7v1LM9qTBI3/m/LLxlsCheYVcG7pSrGIi3R1I1ZSyGKYrsJvOnyi8ng0ALOozjdfe195C46lSWKuynTcJQHN4i1rQ/RvVGAG9MsiQrTs0HuFmfc1oNlY6NC2Y8h8MMSh0dQNDFxnDGsWM/979+RBpTuY=,iv:myZZ4NeSjzqY7Ci8B449yCweo7YxLEq8gpT/XfGCpa0=,tag:KZbiDpGN14RYJNMhSfVrlw==,type:str]
+    lastmodified: "2024-10-09T19:30:18Z"
+    mac: ENC[AES256_GCM,data:3GDvaN5zclIOhylR988zMGPC418WqG6OjdMi1OYA1+5Eyjh1zt06WphxwHB1y34X+R5kNyJhFgy3CuLzKgnuY3x0qNJMvK7cbNAKIuxQEsMHaB8uBM15RotpsgFg9vsvkJp6E0jkV6Un6IJ0p5Zyk+SsVmbbdKxuXZQNTl6247c=,iv:jKXESLbXQo+X65bbgmdffsm3V+Javg06Aqd/syr+7Ag=,tag:jWtOiK49TE/RtfONgcEsYA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
