--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -20,8 +20,8 @@ resources:
   - ./bazarr
   # - ./network-policy.yaml
   - ./doplarr
-  - ./autobrr
-  - ./nzbget
+#  - ./autobrr
+#  - ./nzbget
   - ./otel-collector.yaml
   - ./homepage
   - ./qbittorrent
