--- a/kubernetes/apps/default/sonarr-anime/secret.sops.yaml
+++ b/kubernetes/apps/default/sonarr-anime/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    API_KEY: ENC[AES256_GCM,data:er2ooXJRVcjmM7yKPNXqK3yWL7W2iEWl3QK3BhyfVEg=,iv:JkLdgBBfl8U8uiOia0pDLROD8g961nqHDLOXXffJpTQ=,tag:zrvGJUaWoLgF2QgEVFUGfw==,type:str]
+    APIKEY: ENC[AES256_GCM,data:kfrbVoyOoQPZgnTy8DBTe5/Cp76THtY2KhkyxIabN10=,iv:5hVSMDbQIjkCdi8kiztxAPGuo58OH/P9Slk4V3SE2ps=,tag:Gz6LclMgw/8trxBypkAM1A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age19jc9zp5pc7me0wkx28kc2ypr9qh6t9zphn3fdk63ae9dz9a2h5gsh4w866
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlNVRMZGhiTmlCME5RYVEw
-            MDltRXFrTFJsSVRvZkQ2RU9PYjlTUk44dkdZCi9XQ20vR0xVOXdPUU53elRBV0Zy
-            allheGV4MDRyVnNqaVRjZCtQZlNoT00KLS0tIGFESEpQOWpkSFhxSVZJZytXN3Fv
-            ZVpzNy82dTdtT0RBb1VBSzdmK05SWWMKuaiX/N1Fdtjg9pH4oQujBDq/Tyrwso8N
-            agETOq88GeAwY52flHM86pfnP97Cfn09Tqd098glHDtrVNHPPxOWdA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByVXlpNGhjNzlhWGVsN3hF
+            MWF5MG5uSWhmaFdneVhUenhFUmJRYmpWb2xFCmhlV3JaSEtqZmZlYTRwSzlhWGZO
+            RkhCS1dhRk9Ccnczd1h4M25nT2YyaXcKLS0tIHB6bytXUWFwYm9Ic1JlbWFBc3RY
+            ZVZPemhvNFJtU0hpQjdreFBLVWFVNUEK86O7mY5kEG2y0cR0PiaejayvkvUvn3HO
+            tlroepR6GPfmZITVTMfSyMEhWvaGdGToJO5vKsk5sKLkec7H/O9NnQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-08T00:32:48Z"
-    mac: ENC[AES256_GCM,data:EccNWmQVThMmIqXChsJVOCbIcIrxBkj75ErPgyZYpygnUzjuZ/aY2EYta8G8lc1nEV7LLK0kAfQmoblVXmdEjP9Ewor7vtfUStKRAls7VFa5VEW7Mm/M8jhsObo8hMYO3+GDPXe3huPIFM+6ahlGBlngYq00xEwNSjW07XbmiSY=,iv:WZ80IKu4d1XCXB5E6Tg0Fcel24sFgIcZ/2GY+tcezMg=,tag:LbGgI1kJUaPfE5oIf570qA==,type:str]
+    lastmodified: "2024-10-09T15:25:05Z"
+    mac: ENC[AES256_GCM,data:NUVxMeXzCZGuvChTribVof4AEyTfthe7E00qgA7SMs03Z3VdBAner9ROzERCyFaY7of/wgcVdAd8G1ixaw8MdBsAFn/Zp2UZERe59qOJqusth5TvMp5a63nwmNwk6QbmhZjQugz4J85mcsaNlYPqlBZjYuBjqslUMydQ23Nr9mQ=,iv:4D5DkE9e26a8makhH7uIP42Z1n4CdagB+eO8CmhMhts=,tag:89VWxt+rsvoA3OBijzE/OA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
