--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -13,7 +13,7 @@ concurrency:
 
 jobs:
   configure:
-    if: ${{ github.repository == 'onedr0p/cluster-template' }}
+    #if: ${{ github.repository == 'onedr0p/cluster-template' }}
     name: configure
     runs-on: ubuntu-latest
     strategy:
