--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -33,6 +33,7 @@ spec:
       service:
         annotations:
           io.cilium/lb-ipam-ips: "192.168.1.202"
+          lbipam.cilium.io/sharing-key: "ingress"
         externalTrafficPolicy: Cluster
       ingressClassResource:
         name: internal
