--- a/kubernetes/apps/forgejo/forgejo/secret.sops.yaml
+++ b/kubernetes/apps/forgejo/forgejo/secret.sops.yaml
@@ -5,6 +5,7 @@ metadata:
     namespace: forgejo
 type: Opaque
 stringData:
+    email: ENC[AES256_GCM,data:j58555O2cx2j4fF2NmETKkgOP/2ALQ==,iv:tLb1sX4JSoMjbdfiDJ+cA7Mz7jkIZ3Qz7GDZeUxE31g=,tag:j+mFEaSHKe8KZPF04bRvrw==,type:str]
     username: ENC[AES256_GCM,data:nAi9NEO47g==,iv:AziUrUUAe00vXYVAycF1wQDDF+ARkMEykcFde2V3y/c=,tag:lGf1luwpai4vtq0j14lDug==,type:str]
     password: ENC[AES256_GCM,data:+kGruFouXc5SEb7VweQ=,iv:owwRN/qSp5D/1H4L7IeYPB6IXv7RDpagsY91PuUYN90=,tag:JN0W7HxC030JiUknM+pZjw==,type:str]
 sops:
@@ -22,8 +23,8 @@ sops:
             Yzc1M2UySTVrU2Z6WWJvM0M4Sis3b3cKOYpNqRdMeI/KKgjwoqVsblyzrEjh3ZWk
             oJ477I7VoiieI2RTo3Y5wfr3u3kN7s6lyqnqROyRAs3K6dinMxG1hw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-11T21:50:19Z"
-    mac: ENC[AES256_GCM,data:/cn0mOuCWcBXKIHwW9Wm0hqaDL3D7KwPLjgoZoTXD38UsEWBWisl/OrvhupQNw5LZ7ybuocfjLXwJ2h+MxiA81s2e6G2HRL8ttjGpeCeij5zyyZbUtOj9k1zEV0NKZGKfGYs0UVHpZK2azBM+ENvEPGjt5nsF0foRz0VcXdQPo8=,iv:KefUaVDORJLJsEA5XIggRJXqNiQyNOMVeDdUuHNH21c=,tag:wulbZ4yV2c3Eu02NFQBJOg==,type:str]
+    lastmodified: "2024-10-12T02:16:51Z"
+    mac: ENC[AES256_GCM,data:Zy8rxRm06gMptC39nw5nhbINOSTXow+cta+dUFhA73Lf3DA9m5TPWFfK5AIYMd3AMeHF23kmgm/x5WQyY6eA7Kdcg/6Hr3WPm0jxV5OOvqX2Oj2kOFPjZtws1rDKe93iG2t1OUbzdLmTwkqrfFLrf9B0XK2EvN8OQDt/sKwHq9o=,iv:d1wMU6vsJ/XG6zIIWP84kgjFsyx8wnY5RDJKGTi5hgs=,tag:8epvq+vWpI+U5dEFeHUyzg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.9.0
+    version: 3.9.1
