--- a/kubernetes/apps/forgejo/forgejo/forgejo.yaml
+++ b/kubernetes/apps/forgejo/forgejo/forgejo.yaml
@@ -148,7 +148,6 @@ spec:
     ingress:
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-production
-        lbipam.cilium.io/ips: "192.168.1.202"
       className: internal
       enabled: true
       hosts:
@@ -256,6 +255,7 @@ spec:
         type: ClusterIP
       ssh:
         annotations:
+          lbipam.cilium.io/sharing-cross-namespace: "default,network"
           lbipam.cilium.io/sharing-key: "ingress"
           lbipam.cilium.io/ips: "192.168.1.202"
         clusterIP: None
