--- a/kubernetes/apps/forgejo/forgejo/forgejo.yaml
+++ b/kubernetes/apps/forgejo/forgejo/forgejo.yaml
@@ -255,7 +255,7 @@ spec:
         type: ClusterIP
       ssh:
         annotations:
-          lbipam.cilium.io/sharing-cross-namespace: "default,network"
+          lbipam.cilium.io/sharing-cross-namespace: "forgejo,network"
           lbipam.cilium.io/sharing-key: "ingress"
           lbipam.cilium.io/ips: "192.168.1.202"
         clusterIP: None
