--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
         annotations:
           io.cilium/lb-ipam-ips: "192.168.1.202"
           lbipam.cilium.io/sharing-key: "ingress"
-          lbipam.cilium.io/sharing-cross-namespace: "default,network"
+          lbipam.cilium.io/sharing-cross-namespace: "forgejo,network"
         externalTrafficPolicy: Cluster
       ingressClassResource:
         name: internal
