--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -34,16 +34,17 @@ spec:
           - flow
           - port-distribution
           - icmp
-          - httpV2:
-              exemplars: true
-              labelsContext:
-                - source_ip
-                - source_namespace
-                - source_workload
-                - destination_ip
-                - destination_namespace
-                - destination_workload
-                - traffic_direction
+          - http
+#          - httpV2:
+#              exemplars: true
+#              labelsContext:
+#                - source_ip
+#                - source_namespace
+#                - source_workload
+#                - destination_ip
+#                - destination_namespace
+#                - destination_workload
+#                - traffic_direction
         serviceMonitor:
           enabled: true
         dashboards:
